--- a/super-diamond-server/src/main/resources/META-INF/res/config-development.properties
+++ b/super-diamond-server/src/main/resources/META-INF/res/config-development.properties
@@ -6,7 +6,7 @@
 #jdbc.username = root
 #jdbc.password = 000000
 
-jdbc.url = jdbc:mysql://192.168.68.134:3306/edu_diamond?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url = jdbc:mysql://192.168.68.134:3306/edu_diamond?autoReconnectForPools=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 jdbc.username = root
 jdbc.password = 000000
 
