--- a/super-diamond-server/src/main/resources/META-INF/res/config-production.properties
+++ b/super-diamond-server/src/main/resources/META-INF/res/config-production.properties
@@ -4,7 +4,7 @@
 
 jdbc.url = jdbc:mysql://192.168.1.178:3306/edu_diamond?autoReconnectForPools=true&useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 jdbc.username = root
-jdbc.password = manzai
+jdbc.password = 111111
 jdbc.initialSize = 1
 jdbc.minIdle = 1
 jdbc.maxActive = 20
