--- a/pom.xml
+++ b/pom.xml
@@ -210,20 +210,16 @@
 		  	</plugin>
 		</plugins>
 	</build>
+
 	<distributionManagement>
 		<repository>
-			<id>nexus-releases</id>
-			<name>Nexuss Releses Repository</name>
-			<url>
-				http://repos.iflytek.com:8081/nexus/content/repositories/releases/
-			</url>
+			<id>releases</id>
+			<name>Nexus Release Repository</name>
+			<url>http://192.168.1.251:8086/nexus/content/repositories/local_nexus_releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<name>Nexuss Snapshots Repository</name>
-			<url>
-				http://repos.iflytek.com:8081/nexus/content/repositories/snapshots/
-			</url>
+			<id>local_nexus_snapshots</id>
+			<url>http://192.168.1.251:8086/nexus/content/repositories/local_nexus_snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
